- Add compiler-api for integration with different java compiler plugins - Add simple, naive compiler - setup javault-ws to test as end-to-end application - setup jacoco for test code coverage